# torch-hdf5

./: .dokx  .travis.yml  CMakeLists.txt  LICENSE  README.md  hdf5-0-0.rockspec
doc/: hdf5.md  usage.md
hdf5/include/: H5pubconf.h  tmp.h
luasrc/: CMakeLists.txt  dataset.lua  datasetOptions.lua  ffi.lua  file.lua  group.lua  init.lua  testUtils.lua
tests/: testBasic.lua  testChunking.lua  testData.lua  testDeflate.lua  testPartialWrite.lua  testReference.lua  testSerialization.lua  testStructure.lua  testThreads.lua
tests/benchmark/: benchmark.lua  buffer.lua
tests/data/: generate.py  oneTensor.h5  oneTensor.lua  twoTensors.h5  twoTensors.lua  twoTensorsNested.h5  twoTensorsNested.lua
tests/matlab/: testMatlab.m
tests/python/: testPython.py
